working on update feature

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <h2 class='trans'>Transaction History</h2>
             <ul class='items'>
                 <br>
+                <div class='refresh'>
+                    <button class='refresh-btn'>refresh</button>
+                    </div>
             </ul>
         </div>
     </section>
