--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="title">Crypto tracker</h1>
 <header>
     <div class="invested">
-        invessted
+        invested
     </div>
     <div class="profits">
         profits
@@ -48,12 +48,11 @@
                 </div>
                 </div>
             <h2 class='trans'>Transaction History</h2>
-            <ul class='items'>
-                <br>
-                <div class='refresh'>
-                    <button class='refresh-btn'>refresh</button>
-                    </div>
-            </ul>
+            <ul class='items'></ul>
+            <br>
+            <div class='refresh'>
+                <button class='refresh-btn'>refresh</button>
+            </div>
         </div>
     </section>
 </div>
